--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             display: flex;
             align-items: flex-start;
             gap: 20px;
-            margin-bottom: 15vh; /* Отступ снизу для сенсорной зоны */
+            margin-bottom: 15vh;
         }
         canvas {
             border: 2px solid white;
@@ -28,13 +28,13 @@
         }
         #touchpad {
             position: fixed;
-            bottom: -10px; /* Сенсорная зона на 10px ниже нижней границы холста */
-            left: 50%; /* Центрируем по горизонтали */
-            transform: translateX(-50%); /* Смещаем на половину ширины */
-            width: calc(var(--game-width) + 8px); /* Ширина сенсорной зоны равна ширине холста + 8px (рамка) */
-            height: 15vh; /* Высота сенсорной зоны */
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: calc(var(--game-width) + 8px);
+            height: 15vh;
             background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px; /* Закругленные углы */
+            border-radius: 10px;
             z-index: 1000;
             touch-action: none;
         }
