--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             display: flex;
             align-items: flex-start;
             gap: 20px;
-            margin-bottom: 15vh;
+            margin-bottom: 15vh; /* Отступ снизу для сенсорной зоны */
         }
         canvas {
             border: 2px solid white;
@@ -28,13 +28,13 @@
         }
         #touchpad {
             position: fixed;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(var(--game-width) + 8px);
-            height: 15vh;
+            bottom: -10px; /* Сенсорная зона на 10px ниже нижней границы холста */
+            left: 50%; /* Центрируем по горизонтали */
+            transform: translateX(-50%); /* Смещаем на половину ширины */
+            width: calc(var(--game-width) + 8px); /* Ширина сенсорной зоны равна ширине холста + 8px (рамка) */
+            height: 15vh; /* Высота сенсорной зоны */
             background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
+            border-radius: 10px; /* Закругленные углы */
             z-index: 1000;
             touch-action: none;
         }
@@ -97,8 +97,9 @@
             padding: 20px;
             box-sizing: border-box;
         }
+        /* Стили для модального окна с инструкцией */
         #instructionModal {
-            display: none;
+            display: none; /* Скрыто по умолчанию */
             position: fixed;
             top: 0;
             left: 0;
@@ -117,8 +118,8 @@
             width: 90%;
             max-width: 600px;
             max-height: 80vh;
-            overflow-y: auto;
-            touch-action: pan-y;
+            overflow-y: auto; /* Включаем вертикальную прокрутку */
+            touch-action: pan-y; /* Разрешаем прокрутку на touch-устройствах */
         }
         #instructionModalContent h2 {
             margin-top: 0;
@@ -145,8 +146,10 @@
         <canvas id="gameCanvas"></canvas>
     </div>
 
+    <!-- Сенсорный ползунок -->
     <div id="touchpad"></div>
 
+    <!-- Модальное окно для боевой сводки -->
     <div id="scoreModal">
         <div id="scoreModalContent">
             <h3>Боевая сводка</h3>
@@ -158,11 +161,13 @@
             <div>Уровень: <span id="modalLevel">1</span></div>
             <div>Сложность: <span id="modalDifficultyLevel">0</span></div>
             <div>Здоровье: <span id="modalHealthDisplay">100%</span></div>
+            <!-- Новая кнопка "Инструкция по выживанию" -->
             <button id="instructionButton">Инструкция по выживанию</button>
             <button id="restartButton">Начать игру</button>
         </div>
     </div>
 
+    <!-- Модальное окно для инструкции -->
     <div id="instructionModal">
         <div id="instructionModalContent">
             <h2>Инструкция по выживанию</h2>
@@ -197,6 +202,7 @@
         </div>
     </div>
 
+    <!-- Звуковые эффекты (только OGG) -->
     <audio id="shootSound" src="shoot.ogg"></audio>
     <audio id="explosionSound" src="explosion.ogg"></audio>
     <audio id="backgroundMusic" src="background.ogg" loop></audio>
@@ -209,8 +215,10 @@
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
+        // Инициализация размеров холста
         let gameWidth, gameHeight;
 
+        // Загружаем изображения
         const backgroundImage = new Image();
         backgroundImage.src = 'topographic-map.jpg';
 
@@ -260,7 +268,6 @@
         let infantryHitCounter = 0;
 
         let enemySpawnInterval;
-        let finalExplosionsTriggered = false;
 
         const enemyTypes = [
             { type: 'пехота', width: 10, height: 11, baseSpeed: 0.11, color: 'blue', score: 10, probability: 0.6 },
@@ -308,6 +315,7 @@
             sound.play();
         }
 
+        // Логика для сенсорного ползунка
         const touchpad = document.getElementById('touchpad');
         let isTouching = false;
         let touchStartX = 0;
@@ -317,7 +325,7 @@
         touchpad.addEventListener('touchstart', (e) => {
             isTouching = true;
             const touchpadRect = touchpad.getBoundingClientRect();
-            touchStartX = e.touches[0].clientX - touchpadRect.left;
+            touchStartX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
             playerStartX = player.x;
             isTap = true;
         });
@@ -326,7 +334,7 @@
             if (!isTouching) return;
 
             const touchpadRect = touchpad.getBoundingClientRect();
-            const touchCurrentX = e.touches[0].clientX - touchpadRect.left;
+            const touchCurrentX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
             const deltaX = touchCurrentX - touchStartX;
 
             if (Math.abs(deltaX) > 5) {
@@ -345,11 +353,14 @@
             isTap = false;
         });
 
+        // Обработчик для паузы
         canvas.addEventListener('touchstart', (e) => {
-            const touchY = e.touches[0].clientY;
+            const touchY = e.touches[0].clientY; // Получаем координату Y касания
+
+            // Проверяем, что касание было выше сенсорной зоны управления
             const touchpadRect = touchpad.getBoundingClientRect();
             if (touchY < touchpadRect.top) {
-                togglePause();
+                togglePause(); // Ставим игру на паузу или снимаем с паузы
             }
         });
 
@@ -576,49 +587,47 @@
         }
 
         function createExplosion(x, y) {
-            console.log("Взрыв создан:", x, y); // Отладочное сообщение
             explosions.push({
                 x,
                 y,
-                radius: 10,
-                maxRadius: 50,
+                radius: 5,
+                maxRadius: 20,
                 alpha: 1,
-                duration: 30
+                duration: 20
             });
         }
 
+        function createExplosionsAroundPlayer() {
+            const explosionCount = 10; // Количество взрывов
+            const explosionRadius = 50; // Радиус вокруг игрока, где будут появляться взрывы
+
+            for (let i = 0; i < explosionCount; i++) {
+                const angle = Math.random() * Math.PI * 2; // Случайный угол
+                const distance = Math.random() * explosionRadius; // Случайное расстояние от игрока
+
+                // Вычисляем координаты взрыва
+                const explosionX = player.x + player.width / 2 + Math.cos(angle) * distance;
+                const explosionY = player.y + player.height / 2 + Math.sin(angle) * distance;
+
+                // Создаем взрыв
+                createExplosion(explosionX, explosionY);
+            }
+        }
+
         function drawExplosions() {
-            console.log("Отрисовка взрывов:", explosions.length); // Отладочное сообщение
             explosions.forEach((explosion, index) => {
                 ctx.beginPath();
                 ctx.arc(explosion.x, explosion.y, explosion.radius, 0, Math.PI * 2);
                 ctx.fillStyle = `rgba(255, 100, 0, ${explosion.alpha})`;
                 ctx.fill();
 
-                explosion.radius += 2;
-                explosion.alpha -= 0.03;
+                explosion.radius += 1;
+                explosion.alpha -= 0.05;
 
                 if (explosion.radius > explosion.maxRadius || explosion.alpha <= 0) {
                     explosions.splice(index, 1);
                 }
             });
-        }
-
-        function createFinalExplosions() {
-            const explosionCount = 10;
-            const explosionRadius = 50;
-
-            for (let i = 0; i < explosionCount; i++) {
-                const angle = Math.random() * Math.PI * 2;
-                const distance = Math.random() * explosionRadius;
-
-                const explosionX = player.x + player.width / 2 + Math.cos(angle) * distance;
-                const explosionY = player.y + player.height / 2 + Math.sin(angle) * distance;
-
-                createExplosion(explosionX, explosionY);
-            }
-
-            playExplosionSound();
         }
 
         function checkCollision(obj1, obj2) {
@@ -749,9 +758,15 @@
             backgroundMusic.currentTime = 0;
         }
 
+        let gameEndTimeout = null; // Переменная для хранения таймера завершения игры
+
         function restartGame() {
+            if (gameEndTimeout) {
+                clearTimeout(gameEndTimeout); // Очищаем таймер
+                gameEndTimeout = null;
+            }
+
             gameOver = false;
-            finalExplosionsTriggered = false;
             document.getElementById('scoreModal').style.display = 'none';
             score = 0;
             infantryCount = 0;
@@ -863,16 +878,28 @@
 
         function gameLoop() {
             if (gameOver || player.health <= 0) {
-                if (!finalExplosionsTriggered) {
-                    finalExplosionsTriggered = true;
-                    createFinalExplosions();
-                    setTimeout(() => {
+                if (!gameEndTimeout) { // Проверяем, что таймер еще не запущен
+                    createExplosionsAroundPlayer(); // Создаем взрывы вокруг игрока
+                    gameEndTimeout = setTimeout(() => {
                         updateHighScore();
                         stopBackgroundMusic();
                         updateScoreboard();
                         document.getElementById('scoreModal').style.display = 'flex';
-                    }, 3000);
+                        gameEndTimeout = null; // Сбрасываем таймер
+                    }, 5000); // Задержка 5 секунд перед завершением игры
                 }
+
+                // Продолжаем отрисовывать взрывы
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                drawBackground();
+                drawPlayer();
+                drawMissiles();
+                drawEnemies();
+                drawEnemyMissiles();
+                drawExplosions();
+                drawHealthBar();
+
+                requestAnimationFrame(gameLoop);
                 return;
             }
 
@@ -882,13 +909,14 @@
                 return;
             }
 
+            // Остальная логика игры
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawBackground();
             drawPlayer();
             drawMissiles();
             drawEnemies();
             drawEnemyMissiles();
-            drawExplosions(); // Отрисовываем взрывы
+            drawExplosions();
             drawHealthBar();
             avoidCollisions();
             checkPlayerCollision();
@@ -901,22 +929,27 @@
         }
 
         function resizeCanvas() {
-            const maxWidth = 400;
-            const touchpadHeight = 0.15 * window.innerHeight;
+            const maxWidth = 400; // Максимальная ширина игрового поля
+            const touchpadHeight = 0.15 * window.innerHeight; // Высота сенсорной зоны (15% от высоты экрана)
 
+            // Рассчитываем ширину и высоту холста
             gameWidth = Math.min(window.innerWidth - 40, maxWidth);
-            gameHeight = window.innerHeight - touchpadHeight;
+            gameHeight = window.innerHeight - touchpadHeight; // Высота минус сенсорная зона
 
+            // Устанавливаем размеры холста
             canvas.width = gameWidth;
             canvas.height = gameHeight;
 
+            // Позиционируем холст по центру горизонтально и вверху вертикально
             canvas.style.position = 'absolute';
-            canvas.style.left = '50%';
-            canvas.style.transform = 'translateX(-50%)';
+            canvas.style.left = '50%'; // Центрируем по горизонтали
+            canvas.style.transform = 'translateX(-50%)'; // Смещаем на половину ширины холста
             canvas.style.top = '0';
 
+            // Устанавливаем ширину сенсорной зоны равной ширине холста + 4px (рамка)
             document.documentElement.style.setProperty('--game-width', `${gameWidth}px`);
 
+            // Пересчитываем позицию игрока, чтобы он оставался по центру внизу
             player.x = canvas.width / 2 - player.width / 2;
             player.y = canvas.height - 40;
         }
@@ -925,12 +958,12 @@
             const isPortrait = window.innerHeight > window.innerWidth;
 
             if (!isPortrait) {
-                isPaused = true;
-                showOrientationWarning();
+                isPaused = true; // Ставим игру на паузу
+                showOrientationWarning(); // Показываем предупреждение
             } else {
-                isPaused = false;
-                hideOrientationWarning();
-                resizeCanvas();
+                isPaused = false; // Снимаем с паузы, если ориентация правильная
+                hideOrientationWarning(); // Скрываем предупреждение
+                resizeCanvas(); // Обновляем размеры холста
             }
         }
 
@@ -963,18 +996,21 @@
             }
         }
 
+        // Проверка ориентации при загрузке страницы и изменении размера окна
         checkOrientation();
         window.addEventListener('resize', () => {
-            checkOrientation();
-            resizeCanvas();
+            checkOrientation(); // Проверяем ориентацию
+            resizeCanvas(); // Обновляем размеры холста
         });
 
+        // Запрет масштабирования на touch-устройствах
         document.addEventListener('touchmove', function (event) {
             if (event.scale !== 1) {
-                event.preventDefault();
+                event.preventDefault(); // Запрещаем масштабирование
             }
         }, { passive: false });
 
+        // Ожидание загрузки всех изображений
         Promise.all([
             new Promise((resolve) => { playerImage.onload = resolve; }),
             new Promise((resolve) => { infantryImage.onload = resolve; }),
@@ -982,35 +1018,40 @@
             new Promise((resolve) => { rocketLauncherImage.onload = resolve; }),
             new Promise((resolve) => { backgroundImage.onload = resolve; })
         ]).then(() => {
-            resizeCanvas();
+            resizeCanvas(); // Устанавливаем начальные размеры холста
             document.getElementById('scoreModal').style.display = 'flex';
         });
 
+        // Логика для модального окна с инструкцией
         const instructionModal = document.getElementById('instructionModal');
         const instructionButton = document.getElementById('instructionButton');
         const instructionModalContent = document.getElementById('instructionModalContent');
 
+        // Открываем модальное окно с инструкцией
         instructionButton.addEventListener('click', () => {
             instructionModal.style.display = 'flex';
         });
 
+        // Закрываем модальное окно при клике в любом месте
         instructionModal.addEventListener('click', () => {
             instructionModal.style.display = 'none';
         });
 
+        // Обработка прокрутки текста внутри модального окна
         let startY = 0;
 
         instructionModalContent.addEventListener('touchstart', (e) => {
-            startY = e.touches[0].clientY;
+            startY = e.touches[0].clientY; // Запоминаем начальную позицию касания
         });
 
         instructionModalContent.addEventListener('touchmove', (e) => {
             const currentY = e.touches[0].clientY;
-            const deltaY = startY - currentY;
+            const deltaY = startY - currentY; // Вычисляем разницу по Y
 
+            // Прокручиваем содержимое
             instructionModalContent.scrollBy(0, deltaY);
 
-            startY = currentY;
+            startY = currentY; // Обновляем начальную позицию
         });
     </script>
 </body>
