--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <audio id="infantryHitSound1" src="infantry_hit1.ogg"></audio>
     <audio id="infantryHitSound2" src="infantry_hit2.ogg"></audio>
     <audio id="infantryHitSound3" src="infantry_hit3.ogg"></audio>
+    <audio id="defeatSound" src="defeat.ogg"></audio>
 
     <script>
         const canvas = document.getElementById('gameCanvas');
@@ -302,6 +303,52 @@
             document.getElementById('infantryHitSound2'),
             document.getElementById('infantryHitSound3')
         ];
+
+        let defeatHandled = false;
+        let explosionInterval;
+
+        function createRandomExplosionsAroundPlayer() {
+            const explosionCount = 5; // Количество взрывов за один вызов
+            for (let i = 0; i < explosionCount; i++) {
+                const angle = Math.random() * Math.PI * 2; // Случайный угол
+                const distance = Math.random() * 50 + 30; // Случайное расстояние от игрока (30-80 пикселей)
+                const x = player.x + player.width / 2 + Math.cos(angle) * distance;
+                const y = player.y + player.height / 2 + Math.sin(angle) * distance;
+
+                createExplosion(x, y);
+            }
+        }
+
+        function handleDefeat() {
+            defeatHandled = true;
+
+            // Останавливаем игровой цикл
+            cancelAnimationFrame(gameLoop);
+
+            // Блокируем управление
+            isTouching = false;
+            isTap = false;
+
+            // Запускаем интервал для создания взрывов
+            explosionInterval = setInterval(() => {
+                createRandomExplosionsAroundPlayer();
+            }, 300); // Взрывы каждые 0.3 секунды
+
+            // Проигрываем звук поражения
+            const defeatSound = document.getElementById('defeatSound');
+            defeatSound.currentTime = 0;
+            defeatSound.play();
+
+            // Ждем завершения звука и переходим в меню
+            defeatSound.onended = () => {
+                clearInterval(explosionInterval); // Останавливаем создание взрывов
+                updateHighScore();
+                stopBackgroundMusic();
+                updateScoreboard();
+                document.getElementById('scoreModal').style.display = 'flex';
+                defeatHandled = false; // Сбрасываем флаг для следующей игры
+            };
+        }
 
         function playInfantryHitSound() {
             const randomIndex = Math.floor(Math.random() * infantryHitSounds.length);
@@ -743,6 +790,8 @@
 
         function restartGame() {
             gameOver = false;
+            defeatHandled = false;
+            clearInterval(explosionInterval);
             document.getElementById('scoreModal').style.display = 'none';
             score = 0;
             infantryCount = 0;
@@ -854,10 +903,9 @@
 
         function gameLoop() {
             if (gameOver || player.health <= 0) {
-                updateHighScore();
-                stopBackgroundMusic();
-                updateScoreboard();
-                document.getElementById('scoreModal').style.display = 'flex';
+                if (!defeatHandled) {
+                    handleDefeat();
+                }
                 return;
             }
 
